--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Deprecated==1.2.18
 ecdsa==0.19.1
 Flask==3.1.1
 Flask-Caching==2.3.1
+Flask-Cors==4.0.1
 Flask-Limiter==3.12
 flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
