--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,45 +5,55 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      APP_CONFIG: app.config.TestingConfig
+      APP_CONFIG: app.config.TestingConfig   # use your TestingConfig in CI
+      DATABASE_URL: sqlite://               # keep tests on SQLite
       SECRET_KEY: test-secret
-      # optional: point tests to sqlite file
-      DATABASE_URL: sqlite:///test.db
       FLASK_ENV: testing
+      AUTO_MIGRATE: "0"                     # never auto-migrate during tests
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
+          cache: pip
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # if you use pytest:
-          # pip install pytest
 
-      - name: Run tests
-        run: |
-          python -m unittest discover tests
-          # pytest -q
+      - name: Run unit tests
+        run: python -m unittest discover tests
 
   deploy:
+    # only deploy on pushes to main, and only if tests passed
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Render Deploy
+      - name: Trigger Render deploy
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          SERVICE_ID: ${{ secrets.SERVICE_ID }}
         run: |
-          curl -sS -X POST \
-            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+          curl -fsS -X POST \
+            -H "Authorization: Bearer ${RENDER_API_KEY}" \
             -H "accept: application/json" \
             -H "content-type: application/json" \
-            -d {"clearCache":"do_not_clear"} \
-            "https://api.render.com/v1/services/${{ secrets.SERVICE_ID }}/deploys"
+            "https://api.render.com/v1/services/${SERVICE_ID}/deploys"
